# coingeko_project

./: Advanced-databases-project-description.docx  DOCUMENTATION.md  README.md  SPRAWOZDANIE.docx  SPRAWOZDANIE.md  app.py  coingecko_response.json  crypto_market.db  crypto_market_analysis.ipynb  generate_sprawozdanie.py  main.py  pyproject.toml  raport_cryptomarket_db.docx  test.ipynb
.docs/: README.md  api-reference.md  architecture.md  data-model.md  diagrams.md
docs/: index.html  main.html
