[project]
name = "crypto-market-analysis"
version = "0.1.0"
description = "Cryptocurrency market analysis system – Advanced Databases project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.1",
    "pandas>=2.2",
    "plotly>=5.22",
    "ipywidgets>=8.1",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "nbformat>=5.10",
    "streamlit>=1.35",
]

[dependency-groups]
dev = [
    "pypdf>=4.0",
]
